--- a/config.json
+++ b/config.json
@@ -21,9 +21,7 @@
             "password"      : "OPTIONALLY PUT PASSWORD OF THE BROKER HERE",
             "topic"         : "PUT THE MQTT TOPIC FOR GETTING THE DATA OF THE ACCESSORY HERE",
             "maxTemperature": "OPTIONALLY PUT THE MAX-TEMPERATUR OF THE ACCESSORY HERE (DEFAULT 100)",
-            "minTemperature": "OPTIONALLY PUT THE MIN-TEMPERATUR OF THE ACCESSORY HERE (DEFAULT -50)",
-            "maxHumidity"   : "OPTIONALLY PUT THE MAX-HUMIDITY OF THE ACCESSORY HERE (DEFAULT 100)",
-            "minHumidity"   : "OPTIONALLY PUT THE MIN-HUMIDITY OF THE ACCESSORY HERE (DEFAULT 0)"
+            "minTemperature": "OPTIONALLY PUT THE MIN-TEMPERATUR OF THE ACCESSORY HERE (DEFAULT -50)"
         }
     ]
 }
