--- a/config.json
+++ b/config.json
@@ -20,9 +20,7 @@
             "username"      : "OPTIONALLY PUT USERNAME OF THE BROKER HERE",
             "password"      : "OPTIONALLY PUT PASSWORD OF THE BROKER HERE",
             "topicGet"      : "PUT THE MQTT TOPIC FOR GETTING THE DATA OF THE ACCESSORY HERE",
-            "topicSet"      : "PUT THE MQTT TOPIC FOR REQUESTING A REFRESH OF THE DATA OF THE ACCESSORY HERE",
-            "maxTemperature": "OPTIONALLY PUT THE MAX-TEMPERATUR OF THE ACCESSORY HERE (DEFAULT 100)",
-            "minTemperature": "OPTIONALLY PUT THE MIN-TEMPERATUR OF THE ACCESSORY HERE (DEFAULT -50)"
+            "fakeGatoEnabled": true / false
         }
     ]
 }
