--- a/config.json
+++ b/config.json
@@ -20,7 +20,8 @@
             "username"      : "OPTIONALLY PUT USERNAME OF THE BROKER HERE",
             "password"      : "OPTIONALLY PUT PASSWORD OF THE BROKER HERE",
             "topicGet"      : "PUT THE MQTT TOPIC FOR GETTING THE DATA OF THE ACCESSORY HERE",
-            "fakeGatoEnabled": true / false
+            "fakeGatoEnabled": true / false,
+            "serialNumber"  : "Serialnumber"
         }
     ]
 }
